[package]
name = "sqlparser-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sqlparser = { version = "0.57.0", features = ["serde"], default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional: debug builds only
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]
optional = true

[features]
default = []
debug = ["console_error_panic_hook", "web-sys"]

[profile.release]
# Optimize for size
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort" 